1999-12-15  Darin Adler  <darin@eazel.com>

        * libgnomevfs/gnome-vfs-method.c: (load_module):
          Changed "Loading module" message to a g_message, since we
          want to ignore it, and we don't want to ignore g_warnings.
        * libgnomevfs/gnome-vfs-process.c: (wake_up):
          Changed "Process died" message to a g_message, since we
          want to ignore it, and we don't want to ignore g_warnings.
          (gnome_vfs_process_new): Changed "Process died" message to
          a g_message, since we want to ignore it, and we don't want
          to ignore g_warnings.

1999-12-15 Elliot Lee <sopwith@redhat.com>
	* libgnomevfs/gnome-vfs-ops.[ch]: Use char instead of gchar.
	* libgnomevfs-corba/gnome-vfs-slave-process.c: Use g_message instead
	  of the incorrect g_warning.
	
1999-12-15  Darin Adler  <darin@eazel.com>

        * libgnomevfs/gnome-vfs-async-ops.h
        * libgnomevfs/gnome-vfs-context.c
        * libgnomevfs/gnome-vfs-directory-list.c
        * libgnomevfs/gnome-vfs-directory-list.h
        * libgnomevfs/gnome-vfs-directory.c
        * libgnomevfs/gnome-vfs-directory.h
        * libgnomevfs/gnome-vfs-messages.c
        * libgnomevfs/gnome-vfs-ops.c
        * libgnomevfs/gnome-vfs-ops.h
        * libgnomevfs/gnome-vfs-private-ops.c
        * libgnomevfs/gnome-vfs-private-ops.h
        * libgnomevfs/gnome-vfs-utils.c
        * libgnomevfs/gnome-vfs-utils.h
        * libgnomevfs-corba/gnome-vfs-async-ops.c
        * libgnomevfs-corba/gnome-vfs-slave-notify.c
        * libgnomevfs-pthread/gnome-vfs-async-ops.c
        * test/test-seek.c
          Made meta_keys[] take const char* instead of char*.
          Fixed some warnings.

1999-12-14  Darin Adler  <darin@eazel.com>

	* .cvsignore: Ignore more generated files.
	* libgnomevfs-corba/.cvsignore: Ignore more generated files.
	* modules/extfs/.cvsignore: Ignore more generated files.
	* test/.cvsignore: Ignore more generated files.

1999-12-14  Elliot Lee  <sopwith@redhat.com>
