@@ -33,6 +33,10 @@
 #include <config.h>
 #endif
 
+#ifdef HAVE_ALLOCA_H
+#include <alloca.h>
+#endif
+
 #include "gnome-vfs.h"
 #include "gnome-vfs-private.h"
 
